<resources>
    <string name="app_name">eMed</string>
    <string name="bg_gradient">background_gradient</string>

    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="email">Email ID</string>
    <string name="phone_no">Phone No.</string>
    <string name="user_id">User ID</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="gender">Gender</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="hosp_addr">Hosp. Addr.</string>
    <string name="hospital_addr">Hospital Addr.</string>
    <string name="hosp_name">Hosp. Name</string>
    <string name="hopstial_name">Hopstial Name</string>

    <string name="specialisation">Specialisation</string>
    <string name="dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="prescribe_medicine">Prescribe Medicine</string>
    <string name="patient_history">Patient History</string>
    <string name="prescription_history">Prescription History</string>
    <string name="view_profile">View Profile</string>
    <string name="logout">Logout</string>

    <string name="title_activity_patient">PatientActivity</string>
    <string name="tab_ptn_profile">Profile</string>
    <string name="tab_ptn_scan">Profile Details</string>
    <string name="tab_ptn_history">History</string>

    <string name="create_qr">Create QR</string>

    <string name="central_nervous_system">CENTRAL NERVOUS SYSTEM</string>
    <string name="stroke">Stroke</string>
    <string name="brain_tumor">Brain Tumor</string>
    <string name="meningitis">Meningitis</string>
    <string name="next">Next</string>
    <string name="endocrine_system">ENDOCRINE SYSTEM</string>
    <string name="systemcontainerbtn">SystemContainerBtn</string>
    <string name="diabetes">Diabetes</string>
    <string name="type_1">Type 1</string>
    <string name="type_2">Type 2</string>
    <string name="gestational">Gestational</string>
    <string name="thyroid_disorder">Thyroid Disorder</string>
    <string name="hyperthyroidism">Hyperthyroidism</string>
    <string name="hypothyroidism">Hypothyroidism</string>
    <string name="goitre">Goitre</string>
    <string name="respiratory_system">RESPIRATORY SYSTEM</string>
    <string name="copd_chronic_obstructive_pulmonary_diease">COPD (Chronic Obstructive Pulmonary Diease)</string>
    <string name="chronic_bronchitis">Chronic Bronchitis</string>
    <string name="emphysema">Emphysema</string>
    <string name="asthma">Asthma</string>
    <string name="pneumonia">Pneumonia</string>
    <string name="cardiovascular_system">CARDIOVASCULAR SYSTEM</string>
    <string name="congestive_cardiac_failure">Congestive Cardiac Failure</string>
    <string name="systolic_failure">Systolic Failure</string>
    <string name="diastolic_failure">Diastolic Failure</string>
    <string name="angine">Angine</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="hypertension">Hypertension</string>
    <string name="hypotension">Hypotension</string>
    <string name="vasculitis_aneurysms">Vasculitis/Aneurysms</string>
    <string name="alimentary_system">ALIMENTARY SYSTEM</string>
    <string name="cirrhosis">Cirrhosis</string>
    <string name="pancreatitis">Pancreatitis</string>
    <string name="peptic_ulcer">Peptic Ulcer</string>
    <string name="reproductive_system">REPRODUCTIVE SYSTEM</string>
    <string name="pcos_polycystic_ovary_syndrome">PCOS (Polycystic Ovary Syndrome)</string>
    <string name="ovarian_cysts">Ovarian Cysts</string>
    <string name="infertility">Infertility</string>
    <string name="urinary_system">URINARY SYSTEM</string>
    <string name="kidney_failure">Kidney Failure</string>
    <string name="acute_renal_failure">Acute Renal Failure</string>
    <string name="chronic_renal_failure">Chronic Renal Failure</string>
    <string name="kidney_stone">Kidney Stone</string>
    <string name="skeletal_system">SKELETAL SYSTEM</string>
    <string name="osteoporosis">Osteoporosis</string>
    <string name="arthritis">Arthritis</string>
    <string name="others">OTHERS</string>
    <string name="hiv">HIV</string>
    <string name="hepatitis">Hepatitis</string>
    <string name="hep_a">A</string>
    <string name="hep_b">B</string>
    <string name="hep_c">C</string>
    <string name="hep_d">D</string>
    <string name="hep_e">E</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="tuberculosis_name">Bone etc., (Long Press to remove)</string>
    <string name="carcinoma_cancer">Carcinoma (Cancer)</string>
    <string name="cancer_type">Blood etc., (Long Press to remove)</string>
    <string name="finish">Finish</string>
    <string name="add">Add</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="no_change">Leave empty for no change</string>
    <string name="display_picture">Display Picture</string>

    <string name="app_needs_your_camera_permission_in_order_to_scan_qr_code">App needs your camera permission in order to scan qr code.</string>
    <string name="scan_qr_code">Scan QR Code</string>

    <string name="select_one">Select One</string>
    <string name="long_press_on_a_detail_to_show_qr">Long press on a detail to show QR</string>
    <string name="qrcode_placeholder">QRCode PlaceHolder</string>
    <string name="close">Close</string>

    <string name="pid">PID :</string>
    <string name="date">Date</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_details">Patient Details</string>
    <string name="qr_button">Qr Button</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="dose_duration">Dose/Duration</string>
    <string name="click_to_edit">Click to edit</string>
    <string name="breakfast_time">Breakfast Time</string>
    <string name="lunch_time">Lunch Time</string>
    <string name="dinner_time">Dinner Time</string>
    <string name="reminders_info_text">Reminders set wil be 30 mins prior to these \ntime for medicines before Food</string>
    <string name="set_reminder_for_this_prescription">Set Reminder for this Prescription</string>
    <string name="instructions">Instructions</string>
    <string name="remember_login">Remember Login</string>
    <string name="emed_logo">eMed Logo</string>

    <string-array name="inADay">
        <item>OD</item>
        <item>BiD</item>
        <item>TiD</item>
        <item>QiD</item>
    </string-array>

</resources>
